--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "axios": "^1.6.2",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.2",
-    "next": "14.0.2",
+    "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
